antigen-macros/tests/ui/immune_requires_both_witness_and_requires.stderr
error: #[immune] accepts either `witness = ...` or `requires = ...`, not both. For compound evidence across code-tier and substrate-tier, use `witnesses = [...]` (multi-witness syntax, ADR-019 §F11).
  --> tests/ui/immune_requires_both_witness_and_requires.rs:10:43
   |
10 | #[immune(DummyAntigen, witness = my_test, requires = fresh_within_days(90))]
   |                                           ^^^^^^^^
